@@ -323,3 +323,4 @@
 - Win32 Changes
 - Had to convert the connect messages back to strlen() because of a bug found by Bagge
   working on a way to make it better though
+- Added unknown connection flood protection (settable in config.h)
